# brave-core

android/: brave_java_sources.gni
android/java/strings/: android_brave_strings.grd
app/: brave_generated_resources.grd  generated_resources.grd
browser/: BUILD.gn  brave_profile_prefs.cc
browser/android/rewards/: brave_rewards_native_worker.cc  brave_rewards_native_worker.h  safetynet_check.cc  safetynet_check.h
browser/extensions/: BUILD.gn  brave_browser_action_util.cc  brave_browser_action_util.h  brave_extension_management.cc  brave_extension_management.h
browser/extensions/api/: brave_rewards_api.cc  brave_rewards_api.h  brave_shields_api.cc  brave_shields_api.h
browser/ui/: BUILD.gn  brave_pages.cc
browser/ui/webui/: brave_rewards_page_ui.cc  brave_webcompat_reporter_ui.cc  brave_webcompat_reporter_ui.h  brave_webui_source.cc
browser/webcompat_reporter/: BUILD.gn  webcompat_reporter_service.cc  webcompat_reporter_service.h
common/: network_constants.cc  network_constants.h  pref_names.cc  pref_names.h
common/extensions/api/: brave_rewards.json  brave_shields.json
components/brave_ads/browser/: ads_service_impl.cc
components/brave_rewards/browser/: rewards_service_impl.cc  (+2 more)
components/resources/: brave_components_strings.grd
patches/: chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-android-chrome_feature_list.cc.patch  chrome-common-media-cdm_host_file_path.cc.patch  chrome-installer-util-google_update_settings.cc.patch  tools-metrics-histograms-histograms.xml.patch
test/: BUILD.gn
(+8 files in other folders)
